--- a/tex/p072.tex
+++ b/tex/p072.tex
@@ -20,7 +20,7 @@
 \vs p072 1:2 The industrial mechanism of this nation enjoys a certain great advantage derived from the unique topography of the continent. The high mountains, on which heavy rains fall 8 months in the year, are situated at the very centre of the country. This natural arrangement favours the utilization of water power and greatly facilitates the irrigation of the more arid western quarter of the continent.
 \vs p072 1:3 These people are self\hyp{}sustaining, that is, they can live indefinitely without importing anything from the surrounding nations. Their natural resources are replete, and by scientific techniques they have learned how to compensate for their deficiencies in the essentials of life. They enjoy a brisk domestic commerce but have little foreign trade owing to the universal hostility of their less progressive neighbours.
 \vs p072 1:4 \pc This continental nation, in general, followed the evolutionary trend of the planet: The development from the tribal stage to the appearance of strong rulers and kings occupied thousands of years. The unconditional monarchs were succeeded by many different orders of government --- abortive republics, communal states, and dictators came and went in endless profusion. This growth continued until about 500 years ago when, during a politically fermenting period, one of the nation’s powerful dictator\hyp{}triumvirs had a change of heart. He volunteered to abdicate upon condition that one of the other rulers, the baser of the remaining two, also vacate his dictatorship. Thus was the sovereignty of the continent placed in the hands of one ruler. The unified state progressed under strong monarchial rule for over 100 years, during which there evolved a masterful charter of liberty.
-\vs p072 1:5 The subsequent transition from monarchy to a representative form of government was gradual, the kings remaining as mere social or sentimental figureheads, finally disappearing when the male line of descent ran out. The present republic has now been in existence just 200 years, during which time there has been a continuous progression toward the governmental techniques about to be narrated, the last developments in industrial and political realms having been made within the past decade.
+\vs p072 1:5 The subsequent transition from monarchy to a representative form of government was gradual, the kings remaining as mere social or sentimental figureheads, finally disappearing when the male line of descent ran out. The present republic has now been in existence just two hundred years, during which time there has been a continuous progression toward the governmental techniques about to be narrated, the last developments in industrial and political realms having been made within the past decade.
 \usection{Political Organization}
 \vs p072 2:1 This continental nation now has a representative government with a centrally located national capital. The central government consists of a strong federation of 100 comparatively free states. These states elect their governors and legislators for 10 years, and none are eligible for re\hyp{}election. State judges are appointed for life by the governors and confirmed by their legislatures, which consist of 1 representative for each 100,000 citizens.
 \vs p072 2:2 There are 5 different types of metropolitan government, depending on the size of the city, but no city is permitted to have more than 1,000,000 inhabitants. On the whole, these municipal governing schemes are very simple, direct, and economical. The few offices of city administration are keenly sought by the highest types of citizens.
@@ -33,16 +33,16 @@
 \vs p072 2:9 \pc This nation is adjudicated by two major court systems --- the law courts and the socio\hyp{}economic courts. The law courts function on the following three levels:
 \vs p072 2:10 \ublistelem{1.}\bibnobreakspace \bibemph{Minor courts} of municipal and local jurisdiction, whose decisions may be appealed to the high state tribunals.
 \vs p072 2:11 \ublistelem{2.}\bibnobreakspace \bibemph{State supreme courts,} whose decisions are final in all matters not involving the federal government or jeopardy of citizenship rights and liberties. The regional executives are empowered to bring any case at once to the bar of the federal supreme court.
-\vs p072 2:12 \ublistelem{3.}\bibnobreakspace \bibemph{Federal supreme court ---} the high tribunal for the adjudication of national contentions and the appellate cases coming up from the state courts. This supreme tribunal consists of 12 men over 40 and under 75 years of age who have served 2 or more years on some state tribunal, and who have been appointed to this high position by the chief executive with the majority approval of the supercabinet and the third house of the legislative assembly. All decisions of this supreme judicial body are by at least a two\hyp{}thirds vote.
+\vs p072 2:12 \ublistelem{3.}\bibnobreakspace \bibemph{Federal supreme court ---} the high tribunal for the adjudication of national contentions and the appellate cases coming up from the state courts. This supreme tribunal consists of 12 men over 40 and under 75 years of age who have served 2 or more years on some state tribunal, and who have been appointed to this high position by the chief executive with the majority approval of the supercabinet and the third house of the legislative assembly. All decisions of this supreme judicial body are by at least a two-thirds vote.
 \vs p072 2:13 \pc The socio\hyp{}economic courts function in the following three divisions:
 \vs p072 2:14 \ublistelem{1.}\bibnobreakspace \bibemph{Parental courts,} associated with the legislative and executive divisions of the home and social system.
 \vs p072 2:15 \ublistelem{2.}\bibnobreakspace \bibemph{Educational courts ---} the juridical bodies connected with the state and regional school systems and associated with the executive and legislative branches of the educational administrative mechanism.
 \vs p072 2:16 \ublistelem{3.}\bibnobreakspace \bibemph{Industrial courts ---} the jurisdictional tribunals vested with full authority for the settlement of all economic misunderstandings.
 \vs p072 2:17 \pc The federal supreme court does not pass upon socio\hyp{}economic cases except upon the three\hyp{}quarters vote of the 3\ts{rd} legislative branch of the national government, the house of elder statesmen. Otherwise, all decisions of the parental, educational, and industrial high courts are final.
 \usection{The Home Life}
-\vs p072 3:1 On this continent it is against the law for two families to live under the same roof. And since group dwellings have been outlawed, most of the tenement type of buildings have been demolished. But the unmarried still live in clubs, hotels, and other group dwellings. The smallest homesite permitted must provide 4,600\,m\ts{2}\fnst{This is, approximately, half a hectare. Note, that Anastasia (who appears to be one of the purest Andites living at present) recommends that each family should own and cultivate a hectare of land as a way to save the civilization and enter the new age of enlarged spiritual vision and brotherhood of all mankind based on the fatherhood of God.} of land. All land and other property used for home purposes are free from taxation up to 10 times the minimum homesite allotment.
-\vs p072 3:2 The home life of this people has greatly improved during the last century. Attendance of parents, both fathers and mothers, at the parental schools of child culture is compulsory. Even the agriculturists who reside in small country settlements carry on this work by correspondence, going to the near\hyp{}by centres for oral instruction once in 10 days --- every two weeks, for they maintain a 5\hyp{}day week.
-\vs p072 3:3 The average number of children in each family is 5, and they are under the full control of their parents or, in case of the demise of one or both, under that of the guardians designated by the parental courts. It is considered a great honour for any family to be awarded the guardianship of a full orphan. Competitive examinations are held among parents, and the orphan is awarded to the home of those displaying the best parental qualifications.
+\vs p072 3:1 On this continent it is against the law for two families to live under the same roof. And since group dwellings have been outlawed, most of the tenement type of buildings have been demolished. But the unmarried still live in clubs, hotels, and other group dwellings. The smallest homesite permitted must provide 4,600\,m\ts{2}\fnst{This is, approximately, half a hectare. Note, that Anastasia (who appears to be one of the purest Andites living at present) recommends that each family should own and cultivate a hectare of land as a way to save the civilization and enter the new age of enlarged spiritual vision and brotherhood of all mankind based on the fatherhood of God.} of land. All land and other property used for home purposes are free from taxation up to ten times the minimum homesite allotment.
+\vs p072 3:2 The home life of this people has greatly improved during the last century. Attendance of parents, both fathers and mothers, at the parental schools of child culture is compulsory. Even the agriculturists who reside in small country settlements carry on this work by correspondence, going to the near-by centres for oral instruction once in ten days --- every two weeks, for they maintain a five-day week.
+\vs p072 3:3 The average number of children in each family is five, and they are under the full control of their parents or, in case of the demise of one or both, under that of the guardians designated by the parental courts. It is considered a great honour for any family to be awarded the guardianship of a full orphan. Competitive examinations are held among parents, and the orphan is awarded to the home of those displaying the best parental qualifications.
 \vs p072 3:4 \pc These people regard the home as the basic institution of their civilization. It is expected that the most valuable part of a child’s education and character training will be secured from his parents and at home, and fathers devote almost as much attention to child culture as do mothers.
 \vs p072 3:5 All sex instruction is administered in the home by parents or by legal guardians. Moral instruction is offered by teachers during the rest periods in the school shops, but not so with religious training, which is deemed to be the exclusive privilege of parents, religion being looked upon as an integral part of home life. Purely religious instruction is given publicly only in the temples of philosophy, no such exclusively religious institutions as the Urantia churches having developed among this people. In their philosophy, religion is the striving to know God and to manifest love for one’s fellows through service for them, but this is not typical of the religious status of the other nations on this planet. Religion is so entirely a family matter among these people that there are no public places devoted exclusively to religious assembly. Politically, church and state, as Urantians are wont to say, are entirely separate, but there is a strange overlapping of religion and philosophy.
 \vs p072 3:6 Until 20 years ago the spiritual teachers (comparable to Urantia pastors), who visit each family periodically to examine the children to ascertain if they have been properly instructed by their parents, were under governmental supervision. These spiritual advisers and examiners are now under the direction of the newly created Foundation of Spiritual Progress, an institution supported by voluntary contributions. Possibly this institution may not further evolve until after the arrival of a Paradise Magisterial Son.
@@ -65,8 +65,8 @@
 \vs p072 5:6 \ublistelem{2.}\bibnobreakspace Reasonable salary for skill employed in industrial operations.
 \vs p072 5:7 \ublistelem{3.}\bibnobreakspace Fair and equitable wages for labour.
 \vs p072 5:8 \pc These shall first be met in accordance with contract, or in the face of decreased earnings they shall share proportionally in transient reduction. And thereafter all earnings in excess of these fixed charges shall be regarded as dividends and shall be prorated to all three divisions: capital, skill, and labour.
-\vs p072 5:9 \pc Every 10 years the regional executives adjust and decree the lawful hours of daily gainful toil. Industry now operates on a 5\hyp{}day week, working 4 and playing 1. These people labour 6 hours each working day and, like students, 9 months in the year of 10. Vacation is usually spent in travel, and new methods of transportation having been so recently developed, the whole nation is travel bent. The climate favours travel about 8 months in the year, and they are making the most of their opportunities.
-\vs p072 5:10 \pc 200 years ago the profit motive was wholly dominant in industry, but today it is being rapidly displaced by other and higher driving forces. Competition is keen on this continent, but much of it has been transferred from industry to play, skill, scientific achievement, and intellectual attainment. It is most active in social service and governmental loyalty. Among this people public service is rapidly becoming the chief goal of ambition. The richest man on the continent works 6 hours a day in the office of his machine shop and then hastens over to the local branch of the school of statesmanship, where he seeks to qualify for public service.
+\vs p072 5:9 \pc Every ten years the regional executives adjust and decree the lawful hours of daily gainful toil. Industry now operates on a five-day week, working four and playing one. These people labour six hours each working day and, like students, nine months in the year of ten. Vacation is usually spent in travel, and new methods of transportation having been so recently developed, the whole nation is travel bent. The climate favours travel about 8 months in the year, and they are making the most of their opportunities.
+\vs p072 5:10 \pc Two hundred years ago the profit motive was wholly dominant in industry, but today it is being rapidly displaced by other and higher driving forces. Competition is keen on this continent, but much of it has been transferred from industry to play, skill, scientific achievement, and intellectual attainment. It is most active in social service and governmental loyalty. Among this people public service is rapidly becoming the chief goal of ambition. The richest man on the continent works 6 hours a day in the office of his machine shop and then hastens over to the local branch of the school of statesmanship, where he seeks to qualify for public service.
 \vs p072 5:11 Labour is becoming more honourable on this continent, and all able\hyp{}bodied citizens over 18 work either at home and on farms, at some recognized industry, on the public works where the temporarily unemployed are absorbed, or else in the corps of compulsory labourers in the mines.
 \vs p072 5:12 These people are also beginning to foster a new form of social disgust --- disgust for both idleness and unearned wealth. Slowly but certainly they are conquering their machines. Once they, too, struggled for political liberty and subsequently for economic freedom. Now are they entering upon the enjoyment of both while in addition they are beginning to appreciate their well\hyp{}earned leisure, which can be devoted to increased self\hyp{}realization.
 \usection{Old\hyp{}Age Insurance}
