--- a/tex/p181.tex
+++ b/tex/p181.tex
@@ -28,7 +28,7 @@
 \vs p181 2:10 Simon wanted to speak further, but Jesus raised his hand and, stopping him, went on to say: \textcolour{ubdarkred}{“None of my apostles are more sincere and honest at heart than you, but not one of them will be so upset and disheartened as you, after my departure. In all of your discouragement my spirit shall abide with you, and these, your brethren, will not forsake you. Do not forget what I have taught you regarding the relation of citizenship on earth to sonship in the Father’s spiritual kingdom. Ponder well all that I have said to you about rendering to Caesar the things which are Caesar’s and to God that which is God’s. Dedicate your life, Simon, to showing how acceptably mortal man may fulfil my injunction concerning the simultaneous recognition of temporal duty to civil powers and spiritual service in the brotherhood of the kingdom. If you will be taught by the Spirit of Truth, never will there be conflict between the requirements of citizenship on earth and sonship in heaven unless the temporal rulers presume to require of you the homage and worship which belong only to God.}
 \vs p181 2:11 \pc \textcolour{ubdarkred}{“And now, Simon, when you do finally see all of this, and after you have shaken off your depression and have gone forth proclaiming this gospel in great power, never forget that I was with you even through all of your season of discouragement, and that I will go on with you to the very end. You shall always be my apostle, and after you become willing to see by the eye of the spirit and more fully to yield your will to the will of the Father in heaven, then will you return to labour as my ambassador, and no one shall take away from you the authority which I have conferred upon you, because of your slowness of comprehending the truths I have taught you. And so, Simon, once more I warn you that they who fight with the sword perish with the sword, while they who labour in the spirit achieve life everlasting in the kingdom to come with joy and peace in the kingdom which now is. And when the work given into your hands is finished on earth, you, Simon, shall sit down with me in my kingdom over there. You shall really see the kingdom you have longed for, but not in this life. Continue to believe in me and in that which I have revealed to you, and you shall receive the gift of eternal life.”}
 \vs p181 2:12 \pc When Jesus had finished speaking to Simon Zelotes, he stepped over to Matthew Levi and said: \textcolour{ubdarkred}{“No longer will it devolve upon you to provide for the treasury of the apostolic group. Soon, very soon, you will all be scattered; you will not be permitted to enjoy the comforting and sustaining association of even one of your brethren. As you go onward preaching this gospel of the kingdom, you will have to find for yourselves new associates. I have sent you forth two and two during the times of your training, but now that I am leaving you, after you have recovered from the shock, you will go out alone, and to the ends of the earth, proclaiming this good news: That faith\hyp{}quickened mortals are the sons of God.”}
-\vs p181 2:13 Then spoke Matthew: “But, Master, who will send us, and how shall we know where to go? Will Andrew show us the way?” And Jesus answered: \textcolour{ubdarkred}{“No, Levi, Andrew will no longer direct you in the proclamation of the gospel. He will, indeed, continue as your friend and counsellor until that day whereon the new teacher comes, and then shall the Spirit of Truth lead each of you abroad to labour for the extension of the kingdom. Many changes have come over you since that day at the customhouse when you first set out to follow me; but many more must come before you will be able to see the vision of a brotherhood in which gentile sits alongside Jew in fraternal association. But go on with your urge to win your Jewish brethren until you are fully satisfied and then turn with power to the gentiles. One thing you may be certain of, Levi: You have won the confidence and affection of your brethren; they all love you.”} (And all 10 of them signified their acquiescence in the Master’s words.)
+\vs p181 2:13 Then spoke Matthew: “But, Master, who will send us, and how shall we know where to go? Will Andrew show us the way?” And Jesus answered: \textcolour{ubdarkred}{“No, Levi, Andrew will no longer direct you in the proclamation of the gospel. He will, indeed, continue as your friend and counsellor until that day whereon the new teacher comes, and then shall the Spirit of Truth lead each of you abroad to labour for the extension of the kingdom. Many changes have come over you since that day at the customhouse when you first set out to follow me; but many more must come before you will be able to see the vision of a brotherhood in which gentile sits alongside Jew in fraternal association. But go on with your urge to win your Jewish brethren until you are fully satisfied and then turn with power to the gentiles. One thing you may be certain of, Levi: You have won the confidence and affection of your brethren; they all love you.”} (And all ten of them signified their acquiescence in the Master’s words.)
 \vs p181 2:14 \textcolour{ubdarkred}{“Levi, I know much about your anxieties, sacrifices, and labours to keep the treasury replenished which your brethren do not know, and I am rejoiced that, though he who carried the bag is absent, the publican ambassador is here at my farewell gathering with the messengers of the kingdom. I pray that you may discern the meaning of my teaching with the eyes of the spirit. And when the new teacher comes into your heart, follow on as he will lead you and let your brethren see --- even all the world --- what the Father can do for a hated tax\hyp{}gatherer who dared to follow the Son of Man and to believe the gospel of the kingdom. Even from the first, Levi, I loved you as I did these other Galileans. Knowing then so well that neither the Father nor the Son has respect of persons, see to it that you make no such distinctions among those who become believers in the gospel through your ministry. And so, Matthew, dedicate your whole future life service to showing all men that God is no respecter of persons; that, in the sight of God and in the fellowship of the kingdom, all men are equal, all believers are the sons of God.”}
 \vs p181 2:15 \pc Jesus then stepped over to James Zebedee, who stood in silence as the Master addressed him, saying: \textcolour{ubdarkred}{“James, when you and your younger brother once came to me seeking preferment in the honours of the kingdom, and I told you such honours were for the Father to bestow, I asked if you were able to drink my cup, and both of you answered that you were. Even if you were not then able, and if you are not now able, you will soon be prepared for such a service by the experience you are about to pass through. By such behaviour you angered your brethren at that time. If they have not already fully forgiven you, they will when they see you drink my cup. Whether your ministry be long or short, possess your soul in patience. When the new teacher comes, let him teach you the poise of compassion and that sympathetic tolerance which is born of sublime confidence in me and of perfect submission to the Father’s will. Dedicate your life to the demonstration of that combined human affection and divine dignity of the God\hyp{}knowing and Son\hyp{}believing disciple. And all who thus live will reveal the gospel even in the manner of their death. You and your brother John will go different ways, and one of you may sit down with me in the eternal kingdom long before the other. It would help you much if you would learn that true wisdom embraces discretion as well as courage. You should learn sagacity to go along with your aggressiveness. There will come those supreme moments wherein my disciples will not hesitate to lay down their lives for this gospel, but in all ordinary circumstances it would be far better to placate the wrath of unbelievers that you might live and continue to preach the glad tidings. As far as lies in your power, live long on the earth that your life of many years may be fruitful in souls won for the heavenly kingdom.”}
 \vs p181 2:16 \pc When the Master had finished speaking to James Zebedee, he stepped around to the end of the table where Andrew sat and, looking his faithful helper in the eyes, said: \textcolour{ubdarkred}{“Andrew, you have faithfully represented me as acting head of the ambassadors of the heavenly kingdom. Although you have sometimes doubted and at other times manifested dangerous timidity, still, you have always been sincerely just and eminently fair in dealing with your associates. Ever since the ordination of you and your brethren as messengers of the kingdom, you have been self\hyp{}governing in all group administrative affairs except that I designated you as the acting head of these chosen ones. In no other temporal matter have I acted to direct or to influence your decisions. And this I did in order to provide for leadership in the direction of all your subsequent group deliberations. In my universe and in my Father’s universe of universes, our brethren\hyp{}sons are dealt with as individuals in all their spiritual relations, but in all group relationships we unfailingly provide for definite leadership. Our kingdom is a realm of order, and where two or more will creatures act in co\hyp{}operation, there is always provided the authority of leadership.}
