--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -57,7 +57,7 @@
 \vs p057 5:8 Although Angona succeeded in drawing away the ancestral material of the solar system planets and the enormous volume of matter now circulating about the sun as asteroids and meteors, it did not secure for itself any of this solar matter. The visiting system did not come quite close enough to actually steal any of the sun’s substance, but it did swing sufficiently close to draw off into the intervening space all of the material comprising the present\hyp{}day solar system.
 \vs p057 5:9 The five inner and five outer planets soon formed in miniature from the cooling and condensing nucleuses in the less massive and tapering ends of the gigantic gravity bulge which Angona had succeeded in detaching from the sun, while Saturn and Jupiter\index{Planets!Jupiter|(} were formed from the more massive and bulging central portions. The powerful gravity pull of Jupiter and Saturn early captured most of the material stolen from Angona as the retrograde motion\fnst{In Astronomy, this is the motion in a direction opposite to something else. The opposite is called ``prograde'' motion. All known planets of solar system revolve in orbit around the Sun in the ``prograde'' direction, i.e. in the same direction as the rotation of the Sun. Many (but not all) comets revolve on retrograde orbits.} of certain of their satellites bears witness.
 \vs p057 5:10 Jupiter and Saturn, being derived from the very centre of the enormous column of superheated solar gases, contained so much highly heated sun material that they shone with a brilliant light and emitted enormous volumes of heat; they were in reality secondary suns for a short period after their formation as separate space bodies. These two largest of the solar system planets have remained largely gaseous to this day, not even yet having cooled off to the point of complete condensation or solidification.
-\vs p057 5:11 The gas\hyp{}contraction nucleuses of the other 10 planets soon reached the stage of solidification and so began to draw to themselves increasing quantities of the meteoric matter circulating in near\hyp{}by space. The worlds of the solar system thus had a double origin: nucleuses of gas condensation later on augmented by the capture of enormous quantities of meteors. Indeed they still continue to capture meteors, but in greatly lessened numbers.
+\vs p057 5:11 The gas\hyp{}contraction nucleuses of the other ten planets soon reached the stage of solidification and so began to draw to themselves increasing quantities of the meteoric matter circulating in near\hyp{}by space. The worlds of the solar system thus had a double origin: nucleuses of gas condensation later on augmented by the capture of enormous quantities of meteors. Indeed they still continue to capture meteors, but in greatly lessened numbers.
 \vs p057 5:12 The planets do not swing around the sun in the equatorial plane of their solar mother, which they would do if they had been thrown off by solar revolution. Rather, they travel in the plane of the Angona solar extrusion, which existed at a considerable angle to the plane of the sun’s equator.
 \vs p057 5:13 \pc While Angona was unable to capture any of the solar mass, your sun did add to its metamorphosing planetary family some of the circulating space material of the visiting system. Due to the intense gravity field of Angona, its tributary planetary family pursued orbits of considerable distance from the dark giant; and shortly after the extrusion of the solar system ancestral mass and while Angona was yet in the vicinity of the sun, three of the major planets of the Angona system swung so near to the massive solar system ancestor that its gravitational pull, augmented by that of the sun, was sufficient to overbalance the gravity grasp of Angona and to permanently detach these three tributaries of the celestial wanderer.
 \vs p057 5:14 All of the solar system material derived from the sun was originally endowed with a homogeneous direction of orbital swing, and had it not been for the intrusion of these three foreign space bodies, all solar system material would still maintain the same direction of orbital movement. As it was, the impact of the three Angona tributaries injected new and foreign directional forces into the emerging solar system with the resultant appearance of \bibemph{retrograde motion.} Retrograde motion in any astronomic system is always accidental and always appears as a result of the collisional impact of foreign space bodies. Such collisions may not always produce retrograde motion, but no retrograde ever appears except in a system containing masses which have diverse origins.
@@ -68,7 +68,7 @@
 \vs p057 6:4 If space bodies are similar in size and density, collisions may occur. But if two space bodies of similar density are relatively unequal in size, then, if the smaller progressively approaches the larger, the disruption of the smaller body will occur when the radius of its orbit becomes less than 2.5 times the radius of the larger body. Collisions among the giants of space are rare indeed, but these gravity\hyp{}tidal explosions of lesser bodies are quite common.
 \vs p057 6:5 Shooting stars occur in swarms because they are the fragments of larger bodies of matter which have been disrupted by tidal gravity exerted by near\hyp{}by and still larger space bodies. Saturn’s rings are the fragments of a disrupted satellite. One of the moons of Jupiter\fnst{That is \bibemph{Amalthea,} as the original text (\cite{Jeans1}, p.\,245) specifically says \bibemph{Jupiter's innermost satellite is already perilously near it}. At the time when Sir James Jeans wrote this, the innermost known sattelite was Amalthea. The present ratio of Amalthea's orbital radius to the Roche limit is indeed dangerously close: 1.75. The other close candidates are \bibemph{Metis,} \bibemph{Adrastea} and \bibemph{Thebe,} but they were discovered much later and so could not have been mentioned in the Revelation or its base source text \cite{Jeans1}.} is now approaching dangerously near the critical zone of tidal disruption and, within a few million years, will either be claimed by the planet or will undergo gravity\hyp{}tidal disruption. The fifth planet\fnst{This planet was named \bibemph{Phaeton} by the Soviet astronomer S.V.~Orlov in 1949. The breakup of Phaeton gave origin to the asteroid belt. In 1950 V.G.~Fesenkov explained disintegration of Phaeton by its close encounter with Jupiter. However, this leaves the question why the orbits of the majority of asteroids are so far from Jupiter. Because of this difficulty V.G.~Fesenkov later rejected his own original model. For more information, I refer the reader to the article ``Origin of Asteroids'', by V.A.~Bronshtein (1972) available on \texttt{archive.org} (contributed by NASA).} of the solar system of long, long ago traversed an irregular orbit, periodically making closer and closer approach to Jupiter until it entered the critical zone of gravity\hyp{}tidal disruption, was swiftly fragmentized, and became the present\hyp{}day cluster of asteroids.k
 \vs p057 6:6 \pc \bibemph{4,000,000,000} years ago witnessed the organization of the Jupiter\index{Planets!Jupiter|)} and Saturn systems much as observed today except for their moons, which continued to increase in size for several billions of years. In fact, all of the planets and satellites of the solar system are still growing as the result of continued meteoric captures.
-\vs p057 6:7 \pc \bibemph{3,500,000,000} years ago the condensation nucleuses of the other 10 planets were well formed, and the cores of most of the moons were intact, though some of the smaller satellites later united to make the present\hyp{}day larger moons. This age may be regarded as the era of planetary assembly.
+\vs p057 6:7 \pc \bibemph{3,500,000,000} years ago the condensation nucleuses of the other ten planets were well formed, and the cores of most of the moons were intact, though some of the smaller satellites later united to make the present\hyp{}day larger moons. This age may be regarded as the era of planetary assembly.
 \vs p057 6:8 \pc \bibemph{3,000,000,000} years ago the solar system was functioning much as it does today. Its members continued to grow in size as space meteors continued to pour in upon the planets and their satellites at a prodigious rate.
 \vs p057 6:9 About this time your solar system was placed on the physical registry of Nebadon and given its name, Monmatia.
 \vs p057 6:10 \pc \bibemph{2,500,000,000} years ago the planets had grown immensely in size. Urantia was a well\hyp{}developed sphere about \bibfrac{1}{10}\ts{th} its present mass and was still growing rapidly by meteoric accretion.
